--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,9 @@ jobs:
         with:
           command: build
           args: --release --all-features
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: upload target
+          path: target
 
